--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -77,3 +77,57 @@
     margin-bottom: 3px;
     font-size: 12px;
 }
+
+.archetypeConfig {
+ 
+}
+
+.archetypeConfig ul{
+    list-style: none;
+}
+
+.archetypeConfig .archetypeEditorControls{
+    float: right;
+}
+
+.archetypeConfig li{
+    background-color: #fff;
+}
+
+.archetypeConfig label{
+    width: 100px;
+}
+
+.archetypeConfig .archetypeFieldsetWrapper{
+    border: 1px solid #ccc;
+    padding: 10px 5px;
+    margin-bottom: 10px;
+}
+
+.archetypeConfig .archetypeDeveloperModel {
+    width: 98%;
+    height: 100px;
+}
+
+.archetypeConfig .archetypePropertiesWrapper{
+    border: 1px solid #ddd;
+    padding: 10px;
+    margin: 10px;
+    margin-left: 50px;
+    width: 60%;
+}
+
+.archetypeConfig .archetypePropertiesWrapper ul{
+    padding: 0;
+    margin: 0;
+}
+
+.archetypeConfig .archetypePropertiesWrapper li{
+    padding: 10px;
+    margin-bottom: 10px;
+    background-color: #eee;
+}
+
+.archetypeConfig .archetypePropertiesWrapper li:last-child{
+    margin-bottom: 0;
+}
