--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -2,6 +2,11 @@
     <ul ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
         <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets">
             <div class="archetypeFieldsetWrapper" >
+                <div class="archetypeEditorControls">
+                    <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)"></i>
+                    <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
+                    <i class="icon icon-navigation handle" ng-show="canSort()"></i>
+                </div> 
                 <div>
                     <label>Label</label><input type="text" ng-model="fieldset.label" />
                 </div>
@@ -21,14 +26,14 @@
                     <label>Footer Text</label><input type="text" ng-model="fieldset.footerText" />
                 </div>
                 
-                <div class="archetypeEditorControls">
-                    <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)"></i>
-                    <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
-                    <i class="icon icon-navigation handle" ng-show="canSort()"></i>
-                </div> 
-                <div class=archetypePropertyWrapper">
-                    <ul>
+                <div class="archetypePropertiesWrapper">
+                    <ul ui-sortable="sortableOptions" ng-model="fieldset.properties">
                         <li ng-repeat="property in fieldset.properties">
+                            <div class="archetypeEditorControls">
+                                <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)"></i>
+                                <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
+                                <i class="icon icon-navigation handle" ng-show="canSort()"></i>
+                            </div> 
                             <div>
                                  <label>Label</label><input type="text" ng-model="property.label" />
                             </div>
@@ -47,8 +52,6 @@
                             <div>
                                  <label>Config</label><textarea ng-model="property.config" /></textarea>
                             </div>
-                            
-                             
                         </li>
                     </ul>
                 </div>
