--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -1,11 +1,11 @@
 <div class="archetypeConfig" ng-controller="Imulus.ArchetypeConfigController">
     <ul ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
-        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets">
+        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove">
             <div class="archetypeFieldsetWrapper" >
                 <div class="archetypeEditorControls">
-                    <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)"></i>
-                    <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
-                    <i class="icon icon-navigation handle" ng-show="canSort()"></i>
+                    <i class="icon icon-add" ng-click="addFieldsetRow($index)"></i>
+                    <i class="icon icon-delete" ng-click="removeFieldsetRow($index)" ng-show="canRemoveFieldset()"></i>
+                    <i class="icon icon-navigation handle" ng-show="canSortFieldset()"></i>
                 </div> 
                 <div>
                     <label>Label</label><input type="text" ng-model="fieldset.label" />
@@ -25,14 +25,13 @@
                 <div>
                     <label>Footer Text</label><input type="text" ng-model="fieldset.footerText" />
                 </div>
-                
                 <div class="archetypePropertiesWrapper">
                     <ul ui-sortable="sortableOptions" ng-model="fieldset.properties">
-                        <li ng-repeat="property in fieldset.properties">
+                        <li ng-repeat="property in fieldset.properties" ng-hide="property.remove">
                             <div class="archetypeEditorControls">
-                                <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)"></i>
-                                <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
-                                <i class="icon icon-navigation handle" ng-show="canSort()"></i>
+                                <i class="icon icon-add" ng-click="addPropertyRow(fieldset, $index)"></i>
+                                <i class="icon icon-delete" ng-click="removePropertyRow(fieldset, $index)" ng-show="canRemoveProperty(fieldset)"></i>
+                                <i class="icon icon-navigation handle" ng-show="canSortProperty(fieldset)"></i>
                             </div> 
                             <div>
                                  <label>Label</label><input type="text" ng-model="property.label" />
