--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -131,3 +131,11 @@
 .archetypeConfig .archetypePropertiesWrapper li:last-child{
     margin-bottom: 0;
 }
+
+.archetypeConfig .archetypeFieldsetTitle {
+    overflow: hidden;
+}
+
+.archetypeConfig .arechetypeCollapser{
+    margin-top: 10px;
+}
