--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -1,58 +1,61 @@
 <div class="archetypeConfig" ng-controller="Imulus.ArchetypeConfigController">
     <ul ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
-        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove">
+        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove" ng-click="focusFieldset(fieldset)">
             <div class="archetypeFieldsetWrapper" >
                 <div class="archetypeEditorControls">
-                    <i class="icon icon-add" ng-click="addFieldsetRow($index)"></i>
+                    <i class="icon icon-add" ng-click="addFieldsetRow($index, $event)"></i>
                     <i class="icon icon-delete" ng-click="removeFieldsetRow($index)" ng-show="canRemoveFieldset()"></i>
                     <i class="icon icon-navigation handle" ng-show="canSortFieldset()"></i>
                 </div> 
-                <div>
-                    <label>Label</label><input type="text" ng-model="fieldset.label" />
-                </div>
-                <div>
-                    <label>Alias</label><input type="text" ng-model="fieldset.alias" />
-                </div>
-                <div>
-                    <label>Tooltip</label><input type="text" ng-model="fieldset.tooltip" />
-                </div>
-                <div>
-                    <label>Icon</label><input type="text" ng-model="fieldset.icon" />
-                </div>
-                <div>
-                    <label>Header Text</label><input type="text" ng-model="fieldset.headerText" />
-                </div>
-                <div>
-                    <label>Footer Text</label><input type="text" ng-model="fieldset.footerText" />
-                </div>
-                <div class="archetypePropertiesWrapper">
-                    <ul ui-sortable="sortableOptions" ng-model="fieldset.properties">
-                        <li ng-repeat="property in fieldset.properties" ng-hide="property.remove">
-                            <div class="archetypeEditorControls">
-                                <i class="icon icon-add" ng-click="addPropertyRow(fieldset, $index)"></i>
-                                <i class="icon icon-delete" ng-click="removePropertyRow(fieldset, $index)" ng-show="canRemoveProperty(fieldset)"></i>
-                                <i class="icon icon-navigation handle" ng-show="canSortProperty(fieldset)"></i>
-                            </div> 
-                            <div>
-                                 <label>Label</label><input type="text" ng-model="property.label" />
-                            </div>
-                            <div>
-                                 <label>Alias</label><input type="text" ng-model="property.alias" />
-                            </div>
-                            <div>
-                                 <label>Help Text</label><input type="text" ng-model="property.helpText" />
-                            </div>
-                            <div>
-                                 <label>View</label><input type="text" ng-model="property.view" />
-                            </div>                            
-                            <div>
-                                 <label>Default Value</label><input type="text" ng-model="property.value" />
-                            </div>
-                            <div>
-                                 <label>Config</label><textarea ng-model="property.config" /></textarea>
-                            </div>
-                        </li>
-                    </ul>
+                <div class="archetypeFieldsetTitle">{{fieldset.label}}</div>
+                <div class="arechetypeCollapser" ng-hide="fieldset.collapse">
+                    <div>
+                        <label>Label</label><input type="text" ng-model="fieldset.label" />
+                    </div>
+                    <div>
+                        <label>Alias</label><input type="text" ng-model="fieldset.alias" />
+                    </div>
+                    <div>
+                        <label>Tooltip</label><input type="text" ng-model="fieldset.tooltip" />
+                    </div>
+                    <div>
+                        <label>Icon</label><input type="text" ng-model="fieldset.icon" />
+                    </div>
+                    <div>
+                        <label>Header Text</label><input type="text" ng-model="fieldset.headerText" />
+                    </div>
+                    <div>
+                        <label>Footer Text</label><input type="text" ng-model="fieldset.footerText" />
+                    </div>
+                    <div class="archetypePropertiesWrapper">
+                        <ul ui-sortable="sortableOptions" ng-model="fieldset.properties">
+                            <li ng-repeat="property in fieldset.properties" ng-hide="property.remove">
+                                <div class="archetypeEditorControls">
+                                    <i class="icon icon-add" ng-click="addPropertyRow(fieldset, $index)"></i>
+                                    <i class="icon icon-delete" ng-click="removePropertyRow(fieldset, $index)" ng-show="canRemoveProperty(fieldset)"></i>
+                                    <i class="icon icon-navigation handle" ng-show="canSortProperty(fieldset)"></i>
+                                </div> 
+                                <div>
+                                     <label>Label</label><input type="text" ng-model="property.label" />
+                                </div>
+                                <div>
+                                     <label>Alias</label><input type="text" ng-model="property.alias" />
+                                </div>
+                                <div>
+                                     <label>Help Text</label><input type="text" ng-model="property.helpText" />
+                                </div>
+                                <div>
+                                     <label>View</label><input type="text" ng-model="property.view" />
+                                </div>                            
+                                <div>
+                                     <label>Default Value</label><input type="text" ng-model="property.value" />
+                                </div>
+                                <div>
+                                     <label>Config</label><textarea ng-model="property.config" /></textarea>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </li>
