--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -1,14 +1,14 @@
 <div class="archetypeConfig" ng-controller="Imulus.ArchetypeConfigController">
     <ul ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
-        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove" ng-click="focusFieldset(fieldset)">
+        <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove">
             <div class="archetypeFieldsetWrapper" >
                 <div class="archetypeEditorControls">
                     <i class="icon icon-add" ng-click="addFieldsetRow($index, $event)"></i>
                     <i class="icon icon-delete" ng-click="removeFieldsetRow($index)" ng-show="canRemoveFieldset()"></i>
                     <i class="icon icon-navigation handle" ng-show="canSortFieldset()"></i>
                 </div> 
-                <div class="archetypeFieldsetTitle">{{fieldset.label}}</div>
-                <div class="arechetypeCollapser" ng-hide="fieldset.collapse">
+                <div class="archetypeFieldsetTitle" ng-click="focusFieldset(fieldset)">{{fieldset.label}}</div>
+                <div class="arechetypeCollapser" ng-hide="fieldset.collapse && fieldset.label">
                     <div>
                         <label>Label</label><input type="text" ng-model="fieldset.label" />
                     </div>
