--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -1,5 +1,5 @@
 <div class="archetypeConfig" ng-controller="Imulus.ArchetypeConfigController">
-    <ul ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
+    <ul class="archetypeFieldsets" ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
         <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove">
             <div class="archetypeFieldsetWrapper" >
                 <div class="archetypeEditorControls">
@@ -60,5 +60,44 @@
             </div>
         </li>
     </ul>
-    <textarea class="archetypeDeveloperModel" ng-model="archetypeConfigRenderModel"></textarea>
+    
+    <div class="archetypeOptions">
+        <div>
+            <label>Hide Fieldset Toolbar?<small>Hides the fieldset toolbar that appears when more than one fieldset model appears.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetToolbar"/>
+        </div>
+        <div>
+            <label>Hide fieldset editor controls?<small>Hides the fieldset add/remove/sort controls.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetControls"/>
+        </div>
+        <div>
+            <label>Hide fieldset labels?<small>Hides the fieldset labels.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetLabels"/>
+        </div> 
+        <div>
+            <label>Hide property labels?<small>Hides the property labels.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hidePropertyLabels"/>
+        </div>
+        <div>
+            <label>Max fieldsets<small>How many Fieldsets are allowed? Entering '1' will disable the controls. Default is unlimited.</small></label><input type="text" class="archetypeMaxFieldsets" ng-model="archetypeConfigRenderModel.maxFieldsets"/>
+        </div>    
+        <div>
+            <label>Toggle Advanced Options<small>Show advanced options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.showAdvancedOptions"/>
+        </div>
+    </div>
+    
+    <div class="archetypeAdvancedOptions" ng-show="archetypeConfigRenderModel.showAdvancedOptions">
+        <div>
+            <label>Config Model<small>Be careful editing the text below, it controls the schema for this archetype.</small></label>
+            <textarea class="archetypeDeveloperModel" ng-model="archetypeConfigRenderModel"></textarea>
+        </div>
+        <div>
+            <label>Custom Wrapper Class<small>(Optional) Enter a custom CSS class that will be applied to the wrapper div.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customCssClass"/>
+        </div>
+        <div>
+            <label>CSS File<small>(Optional) Enter a path for a custom CSS file to be included on the page.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customCssPath"/>
+        </div>
+        <div>
+            <label>JS File<small>(Optional) Enter a path for a custom JS file to be included on the page.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customJsPath"/>
+        </div>
+        <div>
+            <label>Toggle Developer Mode<small>Turn on for developer options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.developerMode"/>
+        </div>
+    </div>
 </div>
