Add Label Expression

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -104,6 +104,10 @@
     margin-bottom: 10px;
 }
 
+.archetypeConfig .archetypeFieldsetOption input[type=text]{
+    width: 600px;
+}
+
 .archetypeConfig .archetypeDeveloperModel {
     width: 88%;
     margin-left: 30px;
@@ -141,7 +145,7 @@
     overflow: hidden;
 }
 
-.archetypeConfig .arechetypeCollapser{
+.archetypeConfig .archetypeCollapser{
     margin-top: 10px;
 }
 
