Add Collapser to Property Configs

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -119,7 +119,7 @@
     padding: 10px;
     margin: 10px;
     margin-left: 50px;
-    width: 60%;
+    width: 665px;
 }
 
 .archetypeConfig .archetypePropertiesWrapper ul{
@@ -145,7 +145,7 @@
     overflow: hidden;
 }
 
-.archetypeConfig .archetypeCollapser{
+.archetypeConfig .archetypeFieldsetCollapser{
     margin-top: 10px;
 }
 
@@ -165,4 +165,12 @@
     border: 1px solid #ddd;
     width: 25px;
     text-align: right;
+}
+
+.archetypeConfig .archetypePropertyTitle{
+    overflow: hidden;
+}
+
+.archetypeConfig .archetypePropertyCollapser{
+    margin-top: 10px;
 }
