WIP on 'Required'

--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -61,6 +61,9 @@
                                     <div>
                                          <label>Config</label><textarea ng-model="property.config" /></textarea>
                                     </div>
+                                    <div>
+                                         <label>Required</label><input type="checkbox" ng-model="property.required" />
+                                    </div>
                                 </div>
                             </li>
                         </ul>
