Add Fieldset Highlight when !isValid

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -174,3 +174,7 @@
 .archetypeConfig .archetypePropertyCollapser{
     margin-top: 10px;
 }
+
+.archetypeEditor .archetypeFieldsetError{
+    border: 1px solid red;
+}
