Complete Feature Required
- Also switch to underscore.js for controller.js

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -178,3 +178,10 @@
 .archetypeEditor .archetypeFieldsetError{
     border: 1px solid red;
 }
+
+.archetypeEditor .archetypePropertyError{
+    border: 1px solid red;
+    background-color: #8b0000;
+    color: #fff;
+    margin-bottom: 5px;
+}
