--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -2,7 +2,7 @@
     <ul class="archetypeFieldsets" ui-sortable="sortableOptions" ng-model="archetypeConfigRenderModel.fieldsets">
         <li ng-repeat="fieldset in archetypeConfigRenderModel.fieldsets" ng-hide="fieldset.remove">
             <div class="archetypeFieldsetWrapper" >
-                <div class="archetypeEditorControls">
+                <div class="archetypeEditorControls" ng-show="archetypeConfigRenderModel.enableMultipleFieldsets">
                     <i class="icon icon-add" ng-click="addFieldsetRow($index, $event)"></i>
                     <i class="icon icon-delete" ng-click="removeFieldsetRow($index)" ng-show="canRemoveFieldset()"></i>
                     <i class="icon icon-navigation handle" ng-show="canSortFieldset()"></i>
@@ -74,9 +74,13 @@
     </ul>
     
     <div class="archetypeOptions">
+            
         <div>
-            <label>Hide Fieldset Toolbar?<small>Hides the fieldset toolbar that appears when more than one fieldset model appears.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetToolbar"/>
+            <label>Toggle Advanced Options<small>Show advanced options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.showAdvancedOptions"/>
         </div>
+    </div>
+    
+    <div class="archetypeAdvancedOptions" ng-show="archetypeConfigRenderModel.showAdvancedOptions">
         <div>
             <label>Hide fieldset editor controls?<small>Hides the fieldset add/remove/sort controls.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetControls"/>
         </div>
@@ -88,17 +92,13 @@
         </div>
         <div>
             <label>Max fieldsets<small>How many Fieldsets are allowed? Entering '1' will disable the controls. Default is unlimited.</small></label><input type="text" class="archetypeMaxFieldsets" ng-model="archetypeConfigRenderModel.maxFieldsets"/>
-        </div>    
-        <div>
-            <label>Toggle Advanced Options<small>Show advanced options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.showAdvancedOptions"/>
         </div>
-    </div>
-    
-    <div class="archetypeAdvancedOptions" ng-show="archetypeConfigRenderModel.showAdvancedOptions">
         <div>
-            <label>Config Model<small>Be careful editing the text below, it controls the schema for this archetype.</small></label>
-            <textarea class="archetypeDeveloperModel" ng-model="archetypeConfigRenderModel"></textarea>
-        </div>
+            <label>Enable multiple fieldsets?<small>Allows multiple types of fieldsets within this archetype.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.enableMultipleFieldsets"/>
+        </div> 
+        <div>
+            <label>Hide fieldset toolbar?<small>Hides the fieldset toolbar that appears when more than one fieldset model appears.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetToolbar"/>
+        </div>  
         <div>
             <label>Custom Wrapper Class<small>(Optional) Enter a custom CSS class that will be applied to the wrapper div.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customCssClass"/>
         </div>
@@ -110,6 +110,10 @@
         </div>
         <div>
             <label>Toggle Developer Mode<small>Turn on for developer options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.developerMode"/>
+        </div>
+        <div>
+            <label>Config Model<small>Be careful editing the text below, it controls the schema for this archetype.</small></label>
+            <textarea class="archetypeDeveloperModel" ng-model="archetypeConfigRenderModel"></textarea>
         </div>
     </div>
 </div>
