Alter config and defaultValue
- Turn into strings and try to eval on render

--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -55,7 +55,7 @@
                                     <div>
                                          <label>View</label><select ng-model="property.view" ng-options="view.path as view.name for view in availableViews"></select>
                                     </div>                            
-                                    <div ng-hide="true">
+                                    <div>
                                          <label>Default Value</label><input type="text" ng-model="property.value" />
                                     </div>
                                     <div>
