Fix validation bug, rename labelExpression, change error style

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -32,6 +32,7 @@
 .archetypeEditor .archetypeProperty{
     clear: both;
     overflow: hidden;
+    margin-top: 3px;
 }
 
 .archetypeEditor .umb-contentpicker{
@@ -95,7 +96,7 @@
 }
 
 .archetypeConfig label{
-    width: 100px;
+    width: 120px;
 }
 
 .archetypeConfig .archetypeFieldsetWrapper{
@@ -184,4 +185,6 @@
     background-color: #8b0000;
     color: #fff;
     margin-bottom: 5px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
