--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -16,7 +16,7 @@
                         <label>Alias</label><input type="text" ng-model="fieldset.alias" />
                     </div>
                     <div class="archetypeFieldsetOption">
-                        <label>Label Expr.</label><input type="text" ng-model="fieldset.labelExpression" />
+                        <label>Label Template</label><input type="text" ng-model="fieldset.labelTemplate" />
                     </div>
                     <div class="archetypeFieldsetOption">
                         <label>Tooltip</label><input type="text" ng-model="fieldset.tooltip" />
