--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -8,35 +8,51 @@
             </li>
         </ul>
     </div> 
+
     <ul ui-sortable="sortableOptions" ng-model="archetypeRenderModel.fieldsets">
         <li ng-repeat="fieldset in archetypeRenderModel.fieldsets" ng-hide="fieldset.remove">
             <fieldset ng-class="{archetypeFieldsetError: !fieldset.isValid}" ng-init="fieldsetConfigModel = getConfigFieldsetByAlias(fieldset.alias)">
-                <label ng-hide="model.config.hideFieldsetLabels == '1'" ng-click="focusFieldset(fieldset)">
-                    <img ng-src='{{fieldsetConfigModel.icon}}' title="{{fieldsetConfigModel.tooltip}}"/>
-                    <span ng-bind="getFieldsetTitle(fieldsetConfigModel, $index)"></span>
-                </label>
-                <div class="archetypeEditorControls" ng-hide="model.config.hideFieldsetControls || model.config.maxFieldsets == '1'">
-                    <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)" ng-show="canAdd()"></i>
-                    <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
-                    <i class="icon icon-navigation handle" ng-show="canSort()"></i>
-                </div>  
-                <div class="arechetypeCollapser" ng-hide="fieldset.collapse">
+                <div class="archetypeFieldsetLabel" ng-click="focusFieldset(fieldset)">
+                    <span class="caret" ng-hide="fieldset.collapse"></span>
+                    <span class="caret caret-right" ng-show="fieldset.collapse"></span>
+
+                    <label ng-hide="model.config.hideFieldsetLabels == '1'">
+                        <img ng-src='{{fieldsetConfigModel.icon}}' title="{{fieldsetConfigModel.tooltip}}" />
+                        <span ng-bind="getFieldsetTitle(fieldsetConfigModel, $index)"></span>
+                    </label>
+
+                    <div class="archetypeEditorControls" ng-hide="model.config.hideFieldsetControls || model.config.maxFieldsets == '1'">
+                        <i class="icon icon-add" ng-click="addRow(fieldset.alias, $index)" ng-show="canAdd()"></i>
+                        <i class="icon icon-delete" ng-click="removeRow($index)" ng-show="canRemove()"></i>
+                        <i class="icon icon-navigation handle" ng-show="canSort()"></i>
+                    </div>
+                </div>
+                <div class="arechetypeCollapser animate-hide" ng-hide="fieldset.collapse">
+
                     <div class="archetypeFieldsetHeaderText" ng-show="fieldsetConfigModel.headerText">
                         <em>{{fieldsetConfigModel.headerText}}</em>
-                    </div>             
-                    <div ng-class="{archetypePropertyError: getPropertyValidity($parent.$index, property.alias) === false}" class="archetypeProperty" ng-repeat="property in fieldsetConfigModel.properties">
-                        <label ng-hide="archetypeConfig.hidePropertyLabels == '1'">
-                            <span>{{property.label}}</span>
-                            <div class="archetypeFieldsetHelpText" ng-show="property.helpText">
-                                <em>{{property.helpText}}</em>
-                            </div> 
-                        </label>
-
-                        <archetype-property class="archetypeEditor ng-class:property.alias" property="property" fieldset-index="$parent.$index" fieldset="fieldset" archetype-config="model.config" property-config-index="$index" archetype-render-model="archetypeRenderModel"></archetype-property>
                     </div>
+
+                    <form class="form-inline">
+                        <div ng-class="{archetypePropertyError: getPropertyValidity($parent.$index, property.alias) === false}" class="archetypeProperty control-group" ng-repeat="property in fieldsetConfigModel.properties">
+                            <label ng-hide="archetypeConfig.hidePropertyLabels == '1'" class="control-label" for="archetype-property-{{property.alias}}">
+                                <span>{{property.label}}</span>
+                                <div class="archetypeFieldsetHelpText" ng-show="property.helpText">
+                                    <em>{{property.helpText}}</em>
+                                </div>
+                            </label>
+
+                            <div class="controls">
+                                <archetype-property class="archetypeEditor ng-class:property.alias" property="property" fieldset-index="$parent.$index" fieldset="fieldset" archetype-config="model.config" property-config-index="$index" archetype-render-model="archetypeRenderModel"></archetype-property>
+                            </div>
+                        </div>
+                    </form>
+
+
                     <div class="archetypeFieldsetFooterText" ng-show="fieldsetConfigModel.footerText">
                         <em>{{fieldsetConfigModel.footerText}}</em>
-                    </div>     
+                    </div>
+
                 </div>
             </fieldset>
         </li>
