Fix issue when clicking on label
- Was not focusing the proper fieldset

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -38,8 +38,10 @@
     }
 
     label{
-        width: 75px;
         float: left;
+        width: 90%;
+        margin-bottom: 0;
+        padding: 0;
     }
 }
 
@@ -51,13 +53,6 @@
     background-color: #fff;
     border-top: 1px solid silver;
     border-radius: 0 0 0 5px;
-}
-
-.archetypeEditor fieldset .archetypeFieldsetLabel label{
-    float: left;
-    width: auto;
-    margin-bottom: 0;
-    padding: 0;
 }
 
 .archetypeEditor .multiPropertyTextbox{
