--- a/app/views/archetype.html
+++ b/app/views/archetype.html
@@ -16,7 +16,7 @@
                     <span class="caret" ng-hide="fieldset.collapse"></span>
                     <span class="caret caret-right" ng-show="fieldset.collapse"></span>
 
-                    <label ng-hide="model.config.hideFieldsetLabels == '1'" ng-click="focusFieldset(fieldset)">
+                    <label ng-click="focusFieldset(fieldset)">
                         <img ng-src='{{fieldsetConfigModel.icon}}' title="{{fieldsetConfigModel.tooltip}}" />
                         <span ng-bind="getFieldsetTitle(fieldsetConfigModel, $index)"></span>
                     </label>
