Add margin to the top of fs collapser

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -239,3 +239,7 @@
     visibility: visible !important;
     background-color:   #d0e7f1 !important;
 }
+
+.archetypeConfig .archetypeFieldsetCollapser{
+    margin-top: 5px;
+}
