Adjust label width for nested Archetypes

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -1,4 +1,8 @@
-﻿.archetypeEditor fieldset{
+﻿.archetypeEditor {
+    width: 98%;
+}
+
+.archetypeEditor fieldset{
     border: 1px solid #dddddd;
     padding: 0;
     margin-bottom: 5px;
@@ -39,7 +43,7 @@
 
     label{
         float: left;
-        width: 90%;
+        width: 80%;
         margin-bottom: 0;
         padding: 0;
     }
