Add Icon Picker

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -247,3 +247,7 @@
 .archetypeConfig .archetypeFieldsetCollapser{
     margin-top: 5px;
 }
+
+.archetypeConfig .fieldsetIcon{
+    margin-right: 10px;
+}
