--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -21,8 +21,8 @@
                     <div class="archetypeFieldsetOption">
                         <label>Tooltip</label><input type="text" ng-model="fieldset.tooltip" />
                     </div>
-                    <div class="archetypeFieldsetOption">
-                        <label>Icon</label><input type="text" ng-model="fieldset.icon" />
+                    <div class="archetypeFieldsetOption" ng-show="archetypeConfigRenderModel.enableMultipleFieldsets">
+                        <label>Icon</label><i class="fieldsetIcon icon ng-class:fieldset.icon"></i><a ng-click="selectIcon(fieldset)">Select...</a>
                     </div>
                     <div class="archetypeFieldsetOption">
                         <label>Header Text</label><input type="text" ng-model="fieldset.headerText" />
@@ -30,7 +30,7 @@
                     <div class="archetypeFieldsetOption">
                         <label>Footer Text</label><input type="text" ng-model="fieldset.footerText" />
                     </div>
-                    <div class="archetypeFieldsetOption">
+                    <div class="archetypeFieldsetOption"> 
                         <label>Properties</label>
                     </div>
                     <div class="archetypePropertiesWrapper">
