Fix empty labels not clickable

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -46,6 +46,9 @@
         width: 80%;
         margin-bottom: 0;
         padding: 0;
+        span {
+            display: inline-block;
+        }
     }
 }
 
