--- a/app/views/archetype.config.html
+++ b/app/views/archetype.config.html
@@ -6,27 +6,31 @@
                     <i class="icon icon-add" ng-click="addFieldsetRow($index, $event)"></i>
                     <i class="icon icon-delete" ng-click="removeFieldsetRow($index)" ng-show="canRemoveFieldset()"></i>
                     <i class="icon icon-navigation handle" ng-show="canSortFieldset()"></i>
-                </div> 
+                </div>
                 <div class="archetypeFieldsetTitle" ng-click="focusFieldset(fieldset)">{{fieldset.label}}</div>
                 <div class="archetypeFieldsetCollapser" ng-hide="fieldset.collapse && fieldset.label">
                     <div class="archetypeFieldsetOption">
-                        <label>Label</label><input type="text" ng-model="fieldset.label" />
+                        <label for="archetypeFieldLabel">Label</label>
+                        <input type="text" id="archetypeFieldLabel" ng-model="fieldset.label" />
                     </div>
                     <div class="archetypeFieldsetOption">
-                        <label>Alias</label><input type="text" ng-model="fieldset.alias" />
+                        <label for="archetypeFieldAlias">Alias</label>
+                        <input type="text" id="archetypeFieldAlias" ng-model="fieldset.alias" />
                     </div>
                     <div class="archetypeFieldsetOption">
-                        <label>Label Template</label><input type="text" ng-model="fieldset.labelTemplate" />
+                        <label for="archetypeFieldLabelTemplate">Label Template</label>
+                        <input type="text" id="archetypeFieldLabelTemplate" ng-model="fieldset.labelTemplate" />
                     </div>
                     <div class="archetypeFieldsetOption" ng-show="archetypeConfigRenderModel.enableMultipleFieldsets">
-                        <label>Icon</label><i class="fieldsetIcon icon ng-class:fieldset.icon"></i><a ng-click="selectIcon(fieldset)">Select...</a>
+                        <label for="archetypeFieldIcon">Icon</label>
+                        <i class="fieldsetIcon icon ng-class:fieldset.icon"></i><a ng-click="selectIcon(fieldset)">Select...</a>
                     </div>
-                    <div class="archetypeFieldsetOption"> 
+                    <div class="archetypeFieldsetOption">
                         <label>Properties</label>
                     </div>
                     <div class="archetypePropertiesWrapper">
                         <ul ui-sortable="sortableOptions" ng-model="fieldset.properties">
-                            <li ng-repeat="property in fieldset.properties" ng-hide="property.remove">                              
+                            <li ng-repeat="property in fieldset.properties" ng-hide="property.remove">
                                 <div class="archetypeEditorControls">
                                     <i class="icon icon-add" ng-click="addPropertyRow(fieldset, $index)"></i>
                                     <i class="icon icon-delete" ng-click="removePropertyRow(fieldset, $index)" ng-show="canRemoveProperty(fieldset)"></i>
@@ -35,22 +39,28 @@
                                 <div class="archetypePropertyTitle" ng-click="focusProperty(fieldset.properties, property)">{{property.label}}</div>
                                 <div class="archetypePropertyCollapser" ng-hide="property.collapse && property.label">
                                     <div>
-                                         <label>Label</label><input type="text" ng-model="property.label" />
+                                        <label for="archetypeProperty{{$index}}Label">Label</label>
+                                        <input type="text" id="archetypeProperty{{$index}}Label" ng-model="property.label" />
                                     </div>
                                     <div>
-                                         <label>Alias</label><input type="text" ng-model="property.alias" />
+                                        <label for="archetypeProperty{{$index}}Alias">Alias</label>
+                                        <input type="text" id="archetypeProperty{{$index}}Alias" ng-model="property.alias" />
                                     </div>
                                     <div>
-                                         <label>Help Text</label><input type="text" ng-model="property.helpText" />
+                                        <label for="archetypeProperty{{$index}}HelpText">Help Text</label>
+                                        <input type="text" id="archetypeProperty{{$index}}HelpText" ng-model="property.helpText" />
                                     </div>
                                     <div>
-                                         <label>DataType</label><select ng-model="property.dataTypeId" ng-options="value.id as value.name for (key, value) in availableDataTypes"></select>
-                                    </div>                            
-                                    <div>
-                                         <label>Default Value</label><input type="text" ng-model="property.value" />
+                                        <label for="archetypeProperty{{$index}}DataType">DataType</label>
+                                        <select ng-model="property.dataTypeId" id="archetypeProperty{{$index}}DataType" ng-options="value.id as value.name for (key, value) in availableDataTypes"></select>
                                     </div>
                                     <div>
-                                         <label>Required</label><input type="checkbox" ng-model="property.required" />
+                                        <label for="archetypeProperty{{$index}}DefaultValue">Default Value</label>
+                                        <input type="text" id="archetypeProperty{{$index}}DefaultValue" ng-model="property.value" />
+                                    </div>
+                                    <div>
+                                        <label for="archetypeProperty{{$index}}Required">Required</label>
+                                        <input type="checkbox" id="archetypeProperty{{$index}}Required" ng-model="property.required" />
                                     </div>
                                 </div>
                             </li>
@@ -60,45 +70,54 @@
             </div>
         </li>
     </ul>
-    
+
     <div class="archetypeOptions">
-            
         <div>
-            <label>Toggle Advanced Options<small>Show advanced options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.showAdvancedOptions"/>
+            <label for="archetypeOptionsToggle">Toggle Advanced Options<small>Show advanced options.</small></label>
+            <input type="checkbox" id="archetypeOptionsToggle" ng-model="archetypeConfigRenderModel.showAdvancedOptions"/>
         </div>
     </div>
-    
+
     <div class="archetypeAdvancedOptions" ng-show="archetypeConfigRenderModel.showAdvancedOptions">
         <div>
-            <label>Hide fieldset editor controls?<small>Hides the fieldset add/remove/sort controls.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetControls"/>
+            <label for="archetypeAdvancedOptionsHideControls">Hide fieldset editor controls?<small>Hides the fieldset add/remove/sort controls.</small></label>
+            <input type="checkbox" id="archetypeAdvancedOptionsHideControls" ng-model="archetypeConfigRenderModel.hideFieldsetControls"/>
         </div>
         <div>
-            <label>Hide property labels?<small>Hides the property labels.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hidePropertyLabels"/>
+            <label for="archetypeAdvancedOptionsHideLabels">Hide property labels?<small>Hides the property labels.</small></label>
+            <input type="checkbox" id="archetypeAdvancedOptionsHideLabels" ng-model="archetypeConfigRenderModel.hidePropertyLabels"/>
         </div>
         <div>
-            <label>Max fieldsets<small>How many Fieldsets are allowed? Entering '1' will disable the controls. Default is unlimited.</small></label><input type="text" class="archetypeMaxFieldsets" ng-model="archetypeConfigRenderModel.maxFieldsets"/>
+            <label for="archetypeAdvancedOptionsMaxFieldsets">Max fieldsets<small>How many Fieldsets are allowed? Entering '1' will disable the controls. Default is unlimited.</small></label>
+            <input type="number" id="archetypeAdvancedOptionsMaxFieldsets" class="archetypeMaxFieldsets" ng-model="archetypeConfigRenderModel.maxFieldsets"/>
         </div>
         <div>
-            <label>Enable multiple fieldsets?<small>Allows multiple types of fieldsets within this archetype.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.enableMultipleFieldsets"/>
+            <label for="archetypeAdvancedOptionsMultipleFieldsets">Enable multiple fieldsets?<small>Allows multiple types of fieldsets within this archetype.</small></label>
+            <input type="checkbox" id="archetypeAdvancedOptionsMultipleFieldsets" ng-model="archetypeConfigRenderModel.enableMultipleFieldsets"/>
         </div> 
         <div>
-            <label>Hide fieldset toolbar?<small>Hides the fieldset toolbar that appears when more than one fieldset model appears.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.hideFieldsetToolbar"/>
-        </div>  
-        <div>
-            <label>Custom Wrapper Class<small>(Optional) Enter a custom CSS class that will be applied to the wrapper div.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customCssClass"/>
+            <label for="archetypeAdvancedOptionsFieldsetToolbar">Hide fieldset toolbar?<small>Hides the fieldset toolbar that appears when more than one fieldset model appears.</small></label>
+            <input type="checkbox" id="archetypeAdvancedOptionsFieldsetToolbar" ng-model="archetypeConfigRenderModel.hideFieldsetToolbar"/>
         </div>
         <div>
-            <label>CSS File<small>(Optional) Enter a path for a custom CSS file to be included on the page.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customCssPath"/>
+            <label for="archetypeAdvancedOptionsCustomClass">Custom Wrapper Class<small>(Optional) Enter a custom CSS class that will be applied to the wrapper div.</small></label>
+            <input type="text" id="archetypeAdvancedOptionsCustomClass" ng-model="archetypeConfigRenderModel.customCssClass"/>
         </div>
         <div>
-            <label>JS File<small>(Optional) Enter a path for a custom JS file to be included on the page.</small></label><input type="text" ng-model="archetypeConfigRenderModel.customJsPath"/>
+            <label for="archetypeAdvancedOptionsCustomCss">CSS File<small>(Optional) Enter a path for a custom CSS file to be included on the page.</small></label>
+            <input type="text" id="archetypeAdvancedOptionsCustomCss" ng-model="archetypeConfigRenderModel.customCssPath"/>
         </div>
         <div>
-            <label>Toggle Developer Mode<small>Turn on for developer options.</small></label><input type="checkbox" ng-model="archetypeConfigRenderModel.developerMode"/>
+            <label for="archetypeAdvancedOptionsCustomJs">JS File<small>(Optional) Enter a path for a custom JS file to be included on the page.</small></label>
+            <input type="text" id="archetypeAdvancedOptionsCustomJs" ng-model="archetypeConfigRenderModel.customJsPath"/>
         </div>
         <div>
-            <label>Config Model<small>Be careful editing the text below, it controls the schema for this archetype.</small></label>
-            <textarea class="archetypeDeveloperModel" ng-model="archetypeConfigRenderModel"></textarea>
+            <label for="archetypeAdvancedOptionsDeveloperMode">Toggle Developer Mode<small>Turn on for developer options.</small></label>
+            <input type="checkbox" id="archetypeAdvancedOptionsDeveloperMode" ng-model="archetypeConfigRenderModel.developerMode"/>
+        </div>
+        <div>
+            <label for="archetypeAdvancedOptionsConfigModel">Config Model<small>Be careful editing the text below, it controls the schema for this archetype.</small></label>
+            <textarea class="archetypeDeveloperModel" id="archetypeAdvancedOptionsConfigModel" ng-model="archetypeConfigRenderModel"></textarea>
         </div>
     </div>
 </div>
