Wired up Archetype's labels with the fields.
Using the fieldset and property's index/position to set the alias/ID.

+ small CSS tweak

--- a/app/less/archetype.less
+++ b/app/less/archetype.less
@@ -45,6 +45,7 @@
         float: left;
         width: 80%;
         margin-bottom: 0;
+        margin-left: 5px;
         padding: 0;
     }
 }
@@ -91,6 +92,7 @@
 
 .archetypeEditor .archetypeDeveloperModel
 {
+    font-family: monospace;
     width: 98%;
     min-height: 100px;
     margin-bottom: 10px;
